--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -30,7 +30,7 @@
     <string name="menu_view_contact_list">"Lista kontaktów"</string>
     <string name="menu_invite_contact">"Zaproś…"</string>
     <string name="menu_switch_chats">"Przełącz czaty"</string>
-    <string name="menu_insert_smiley">"Wstaw emotikon"</string>
+    <string name="menu_insert_smiley">"Wstaw buźkę"</string>
     <string name="menu_plus">"Menu+"</string>
     <string name="default_input_title">"Katalog wejściowy"</string>
     <string name="confirm">"Potwierdź"</string>
@@ -73,7 +73,7 @@
     <string name="blocked_list_title">"Zablokowane kontakty - <xliff:g id="USER">%1$s</xliff:g>"</string>
     <string name="no_blocked_contact">"Brak zablokowanych kontaktów."</string>
     <string name="contact_profile_title">"Profil kontaktu"</string>
-    <string name="label_status">"Stan:"</string>
+    <string name="label_status">"Status:"</string>
     <string name="label_client_type">"Typ klienta:"</string>
     <string name="client_type_computer">"Komputer"</string>
     <string name="client_type_mobile">"Przenośny"</string>
@@ -120,12 +120,12 @@
     <string name="setting_title">"Ustawienia ogólne"</string>
     <string name="hide_offline_contacts">"Ukryj kontakty offline"</string>
     <string name="notification_group_title">"Ustawienia powiadomień"</string>
-    <string name="notification_enabled_title">"Powiadomienia wiadomości błyskawicznych"</string>
-    <string name="notification_enabled_summary">"Sygnalizuj nadejście wiadomości błyskawicznej na pasku stanu"</string>
+    <string name="notification_enabled_title">"Powiadamiaj o czacie"</string>
+    <string name="notification_enabled_summary">"Sygnalizuj nową wiadomość na czacie na pasku stanu"</string>
     <string name="notification_vibrate_title">"Wibracje"</string>
-    <string name="notification_vibrate_summary">"Sygnalizuj nadejście wiadomości błyskawicznej wibracją"</string>
+    <string name="notification_vibrate_summary">"Sygnalizuj wiadomość na czacie wibracją"</string>
     <string name="notification_sound_title">"Dźwięk"</string>
-    <string name="notification_sound_summary">"Sygnalizuj nadejście wiadomości błyskawicznej dzwonkiem"</string>
+    <string name="notification_sound_summary">"Sygnalizuj wiadomość na czacie dzwonkiem"</string>
     <string name="notification_ringtone_title">"Wybierz dzwonek"</string>
     <string name="invitation_prompt">"<xliff:g id="USER">%1$s</xliff:g> przesyła zaproszenie do czatu grupowego."</string>
     <string name="invitation_sent_prompt">"Wysłano zaproszenie do użytkownika <xliff:g id="USER">%1$s</xliff:g>."</string>
@@ -146,7 +146,7 @@
     <string name="block_contact_success">"Zablokowano kontakt „<xliff:g id="USER">%1$s</xliff:g>”."</string>
     <string name="unblock_contact_success">"Odblokowano kontakt „<xliff:g id="USER">%1$s</xliff:g>”."</string>
     <string name="perm_label">"uruchom usługę wiadomości błyskawicznych"</string>
-    <string name="perm_desc">"Umożliwia aplikacjom uruchamianie usługi wiadomości błyskawicznych przez zamierzenie."</string>
+    <string name="perm_desc">"Umożliwia aplikacjom uruchamianie czatu na żądanie."</string>
     <string name="error">"Uwaga"</string>
     <string name="login_service_failed">"Nie można zalogować do usługi <xliff:g id="SERVICE">%1$s</xliff:g>. Spróbuj ponownie później."\n"(Szczegóły: <xliff:g id="DESCRIPTION">%2$s</xliff:g>)"</string>
     <string name="add_list_failed">"Nie dodano listy."</string>
