--- a/samples/PluginDemo/res/values-nb/strings.xml
+++ b/samples/PluginDemo/res/values-nb/strings.xml
@@ -67,7 +67,7 @@
     <item>":-["</item>
     <item>"O:-)"</item>
     <item>":-\\\\"</item>
-    <item>":\\\'("</item>
+    <item>":\'("</item>
     <item>":-X"</item>
     <item>":-D"</item>
     <item>"o_O"</item>
