--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -179,9 +179,9 @@
     <string name="not_signed_in">"No has accedido a tu cuenta."</string>
     <string name="general_error">"Código de error <xliff:g id="CODE">%1$d</xliff:g>"</string>
   <string-array name="default_smiley_names">
-    <item>"Contento"</item>
+    <item>"Feliz"</item>
     <item>"Triste"</item>
-    <item>"Guiño"</item>
+    <item>"Guiñando"</item>
     <item>"Sacando la lengua"</item>
     <item>"Sorprendido"</item>
     <item>"Besando"</item>
