--- a/samples/PluginDemo/res/values-it/strings.xml
+++ b/samples/PluginDemo/res/values-it/strings.xml
@@ -19,7 +19,7 @@
     <string name="menu_remove_contact">"Elimina contatto"</string>
     <string name="menu_block_contact">"Blocca"</string>
     <string name="menu_contact_list">"Elenco contatti"</string>
-    <string name="menu_start_chat">"Invia msg chat"</string>
+    <string name="menu_start_chat">"Invia IM"</string>
     <string name="menu_view_profile">"Info amico"</string>
     <string name="menu_end_conversation">"Termina conversazione"</string>
     <string name="menu_switch_chats">"Cambia conversazione"</string>
@@ -37,20 +37,20 @@
   <string-array name="smiley_names">
     <item>"Felice"</item>
     <item>"Triste"</item>
-    <item>"Occhiolino"</item>
-    <item>"Linguaccia"</item>
+    <item>"Fare l\'occhiolino"</item>
+    <item>"Lingua fuori"</item>
     <item>"Sorpreso"</item>
-    <item>"Bacio"</item>
-    <item>"Urlo"</item>
-    <item>"Fico"</item>
-    <item>"Fatti, non parole"</item>
+    <item>"Baciare"</item>
+    <item>"Urlare"</item>
+    <item>"Favoloso"</item>
+    <item>"Bocca a forma di dollaro"</item>
     <item>"Gaffe"</item>
     <item>"Imbarazzato"</item>
     <item>"Angelo"</item>
     <item>"Indeciso"</item>
-    <item>"Piango"</item>
+    <item>"Piangere"</item>
     <item>"Labbra cucite"</item>
-    <item>"Risata"</item>
+    <item>"Sorridere"</item>
     <item>"Confuso"</item>
   </string-array>
   <string-array name="smiley_texts">
