--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -53,14 +53,10 @@
     <string name="sign_in">"Acceder"</string>
     <string name="signing_in_to">"Accediendo a <xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait">"Accediendo..."</string>
-    <!-- no translation found for bg_data_prompt_title (4861800723853178111) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_message (2343305645142823544) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_ok (3443385427882751532) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_cancel (7206105589826174638) -->
-    <skip />
+    <string name="bg_data_prompt_title">"Datos de referencia inhabilitados"</string>
+    <string name="bg_data_prompt_message">"Para iniciar <xliff:g id="PROVIDER">%1$s</xliff:g>, es necesario habilitar los datos de referencia."</string>
+    <string name="bg_data_prompt_ok">"Habilitar"</string>
+    <string name="bg_data_prompt_cancel">"Salir"</string>
     <string name="ongoing_conversation">"Chats en curso (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="online_count">"<xliff:g id="NUMBER">%1$d</xliff:g> conectado"</string>
     <string name="subscriptions">"Invitaciones de amigos"</string>
