--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -53,14 +53,10 @@
     <string name="sign_in">"Logg inn"</string>
     <string name="signing_in_to">"Logger inn på <xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait">"Logger inn…"</string>
-    <!-- no translation found for bg_data_prompt_title (4861800723853178111) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_message (2343305645142823544) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_ok (3443385427882751532) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_cancel (7206105589826174638) -->
-    <skip />
+    <string name="bg_data_prompt_title">"Bakgrunnsdata deaktivert"</string>
+    <string name="bg_data_prompt_message">"<xliff:g id="PROVIDER">%1$s</xliff:g> trenger at bakgrunnsdata er aktivert."</string>
+    <string name="bg_data_prompt_ok">"Aktiver"</string>
+    <string name="bg_data_prompt_cancel">"Avslutt"</string>
     <string name="ongoing_conversation">"Pågående samtaler (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="online_count">"<xliff:g id="NUMBER">%1$d</xliff:g> tilgjengelig"</string>
     <string name="subscriptions">"Venneinvitasjoner"</string>
@@ -85,16 +81,14 @@
     <string name="presence_invisible">"Usynlig"</string>
     <string name="chat_with">"Samtale med <xliff:g id="USER">%1$s</xliff:g>"</string>
     <string name="me">"Meg"</string>
-    <!-- no translation found for compose_hint (1735533889811320962) -->
-    <skip />
+    <string name="compose_hint">"Skriv her"</string>
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> er tilgjengelig"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> er borte"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> er opptatt"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> er avlogget"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> har blitt med i samtalen"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> har forlatt samtalen"</string>
-    <!-- no translation found for time_stamp (8952691401963972802) -->
-    <skip />
+    <string name="time_stamp" format="date">"'Sendt '<xliff:g id="HOUR">hh</xliff:g>':'<xliff:g id="MINUTE">mm</xliff:g>' '<xliff:g id="AMPM">a</xliff:g>', '<xliff:g id="DATE">EEEE</xliff:g>"</string>
     <string name="send">"Send"</string>
     <string name="msg_sent_failed">"Kunne ikke sende meldingen."</string>
     <string name="disconnected_warning">"Mistet tilkoblingen til tjeneren. Meldingen vil bli sendt ved tilkobling."</string>
