--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -53,14 +53,10 @@
     <string name="sign_in">"Войти"</string>
     <string name="signing_in_to">"Вход в аккаунт <xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait">"Выполняется вход…"</string>
-    <!-- no translation found for bg_data_prompt_title (4861800723853178111) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_message (2343305645142823544) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_ok (3443385427882751532) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_cancel (7206105589826174638) -->
-    <skip />
+    <string name="bg_data_prompt_title">"Исходные данные отключены"</string>
+    <string name="bg_data_prompt_message">"<xliff:g id="PROVIDER">%1$s</xliff:g> требует, чтобы были включены исходные данные"</string>
+    <string name="bg_data_prompt_ok">"Включить"</string>
+    <string name="bg_data_prompt_cancel">"Выйти"</string>
     <string name="ongoing_conversation">"Открыто чатов: <xliff:g id="NUMBER">%1$d</xliff:g>"</string>
     <string name="online_count">"В сети: <xliff:g id="NUMBER">%1$d</xliff:g>"</string>
     <string name="subscriptions">"Предложения дружбы"</string>
