--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -53,14 +53,10 @@
     <string name="sign_in">"登录"</string>
     <string name="signing_in_to">"登录<xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait">"正在登录..."</string>
-    <!-- no translation found for bg_data_prompt_title (4861800723853178111) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_message (2343305645142823544) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_ok (3443385427882751532) -->
-    <skip />
-    <!-- no translation found for bg_data_prompt_cancel (7206105589826174638) -->
-    <skip />
+    <string name="bg_data_prompt_title">"背景数据被禁用"</string>
+    <string name="bg_data_prompt_message">"<xliff:g id="PROVIDER">%1$s</xliff:g> 需要启用背景数据。"</string>
+    <string name="bg_data_prompt_ok">"启用"</string>
+    <string name="bg_data_prompt_cancel">"退出"</string>
     <string name="ongoing_conversation">"正在进行的聊天数 (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="online_count">"<xliff:g id="NUMBER">%1$d</xliff:g> 人在线"</string>
     <string name="subscriptions">"好友邀请"</string>
