--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -125,10 +125,10 @@
     <string name="subscription_notify_text">"<xliff:g id="USER">%s</xliff:g>さんから招待状が届きました"</string>
     <string name="notify_groupchat_label">"グループチャットの招待"</string>
     <string name="group_chat_invite_notify_text">"<xliff:g id="USER">%s</xliff:g>さんからグループチャットの招待状が届きました"</string>
-    <string name="add_contact_success">"連絡先「<xliff:g id="USER">%1$s</xliff:g>」を追加しました。"</string>
-    <string name="delete_contact_success">"連絡先「<xliff:g id="USER">%1$s</xliff:g>」を削除しました。"</string>
-    <string name="block_contact_success">"連絡先「<xliff:g id="USER">%1$s</xliff:g>」をブロックしました。"</string>
-    <string name="unblock_contact_success">"連絡先「<xliff:g id="USER">%1$s</xliff:g>」のブロックを解除しました。"</string>
+    <string name="add_contact_success">"「<xliff:g id="USER">%1$s</xliff:g>」を追加しました。"</string>
+    <string name="delete_contact_success">"「<xliff:g id="USER">%1$s</xliff:g>」を削除しました。"</string>
+    <string name="block_contact_success">"「<xliff:g id="USER">%1$s</xliff:g>」をブロックしました。"</string>
+    <string name="unblock_contact_success">"「<xliff:g id="USER">%1$s</xliff:g>」のブロックを解除しました。"</string>
     <string name="perm_label">"IM/チャットの起動"</string>
     <string name="perm_desc">"intent経由でのIMサービスの開始をアプリケーションに許可します。"</string>
     <string name="error">"注意"</string>
@@ -142,7 +142,7 @@
     <string name="load_contact_list_failed">"連絡先リストをロードできませんでした。"</string>
     <string name="cant_connect_to_server">"サーバーに接続できません。接続を確認してください。"</string>
     <string name="contact_already_exist">"<xliff:g id="USER">%1$s</xliff:g>さんは既に連絡先リストに登録されています。"</string>
-    <string name="contact_blocked">"連絡先「<xliff:g id="USER">%1$s</xliff:g>」はブロックされています。"</string>
+    <string name="contact_blocked">"「<xliff:g id="USER">%1$s</xliff:g>」はブロックされています。"</string>
     <string name="contact_not_loaded">"連絡先リストを読み込んでいます。しばらくお待ちください。"</string>
     <string name="network_error">"ネットワークエラーが発生しました。"</string>
     <string name="service_not_support">"この機能はサーバーでサポートされていません。"</string>
