--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -104,7 +104,7 @@
     <string name="setting_title">"Allgemeine Einstellungen"</string>
     <string name="hide_offline_contacts">"Offline-Kontakte ausblenden"</string>
     <string name="notification_group_title">"Benachrichtigungseinstellungen"</string>
-    <string name="notification_enabled_title">"Chat-Benachrichtigungen"</string>
+    <string name="notification_enabled_title">"Chat-Benachrichtigung"</string>
     <string name="notification_enabled_summary">"Bei Nachrichteneingang Benachrichtigung in Statuszeile anzeigen"</string>
     <string name="notification_vibrate_title">"Vibrieren"</string>
     <string name="notification_vibrate_summary">"Bei Nachrichteneingang vibrieren"</string>
@@ -166,13 +166,13 @@
     <item>"Glücklich"</item>
     <item>"Traurig"</item>
     <item>"Zwinkern"</item>
-    <item>"Herausgestreckte Zunge"</item>
+    <item>"Zunge herausstrecken"</item>
     <item>"Überrascht"</item>
     <item>"Kuss"</item>
     <item>"Schreien"</item>
     <item>"Cool"</item>
-    <item>"Worten sollen Taten folgen"</item>
-    <item>"Ins Fettnäpfchen getreten"</item>
+    <item>"Lass Taten sprechen"</item>
+    <item>"Fettnäpfchen"</item>
     <item>"Peinlich berührt"</item>
     <item>"Engel"</item>
     <item>"Unentschlossen"</item>
