--- a/samples/PluginDemo/res/values-nl/strings.xml
+++ b/samples/PluginDemo/res/values-nl/strings.xml
@@ -15,8 +15,8 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="menu_add_contact">"Contactpersoon toevoegen"</string>
-    <string name="menu_remove_contact">"Contactpersoon verwijderen"</string>
+    <string name="menu_add_contact">"Contact toevoegen"</string>
+    <string name="menu_remove_contact">"Contact verwijderen"</string>
     <string name="menu_block_contact">"Blokkeren"</string>
     <string name="menu_contact_list">"Lijst met contacten"</string>
     <string name="menu_start_chat">"Chat verzenden"</string>
@@ -31,7 +31,7 @@
     <string name="ongoing_conversation">"Conversaties (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="contact_profile_title">"Contactgegevens"</string>
     <string name="presence_available">"Beschikbaar"</string>
-    <string name="add_contact_title">"Contactpersoon toevoegen"</string>
+    <string name="add_contact_title">"Contact toevoegen"</string>
     <string name="input_contact_label">"Schermnaam van de persoon die u wilt toevoegen:"</string>
     <string name="invite_label">"Buddy toevoegen"</string>
   <string-array name="smiley_names">
