--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -166,7 +166,7 @@
     <item>"Glücklich"</item>
     <item>"Traurig"</item>
     <item>"Zwinkern"</item>
-    <item>"Zunge herausstrecken"</item>
+    <item>"Zunge rausstrecken"</item>
     <item>"Überrascht"</item>
     <item>"Kuss"</item>
     <item>"Schreien"</item>
